Fixed image alignment and centered grid

--- a/Langwarrin_CC/src/components/styles/Grid.css
+++ b/Langwarrin_CC/src/components/styles/Grid.css
@@ -1,20 +1,30 @@
-/* Grid.css */
+/* Ensure the grid container is centered horizontally */
+.grid-container {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center; /* Center the content horizontally */
+}
 
+/* Adjust the alignment for the cards and images */
 .card-img {
-    width: 100%;
-    height: auto;
-  }
-  
-  .card-title {
-    color: #32cd32;
-  }
-  
-  .card-button {
-    background-color: #3cb371;
-    border-color: #3cb371;
-  }
-  
-  .row-align-center {
-    display: flex;
-    align-items: center;
-  }
+  width: 100%;
+  height: auto;
+}
+
+.card-title {
+  color: #32cd32;
+}
+
+.card-button {
+  background-color: #3cb371;
+  border-color: #3cb371;
+}
+
+/* Align the content in the row vertically and center each card's content */
+.row-align-center {
+  display: flex;
+  align-items: center;
+  justify-content: center; /* This centers the content horizontally */
+}
